tdf#120735 sw: clear the font cache text glyphs when layout finished

The motivation for remembering the text glyphs was to avoid repeated layout
calls during one sw layout run, this still preserves that optimization.

Approximate numbers for memory usage after importing the bugdoc finished:

- old: 401MB

- new 366MB (91% of baseline)

Change-Id: Ie960c606a8246c9c696745b2dcc9a49c3c570c07